--- a/Personal_Bio.html
+++ b/Personal_Bio.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Bio</title>
+    <link rel="stylesheet" href="/Personal_Bio.css">
 </head>
 <body>
     <header>
         <h1>This is my 1st practice webpage about my Bio.</h1>
     </header>
-    <section>
-        <p>I'm Sabbir Hossen, a student of IUM, trying to learn frontend development.</p>
+    <section>     
+        
         <img src="profile.jpg" alt="Sabbir's picture" width="100" height="90"><br><br>
+         <div id="self">
+            <p>I'm Sabbir Hossen, a student of IUM, trying to learn frontend development.</p>
+        </div>
+        <br><br>
         <b>Here are some of my hobbies:</b>
         <ul>
             <li>Coding</li>
@@ -19,7 +24,9 @@
             <li>Journal writing</li>
             <li>Eating</li>
         </ul>
-            <a href="https://github.com/MSabbirHossen" target="_blank" aria-label="Visit Sabbir's GitHub Profile">Visit my favorite website</a>           
+        <div id="link">
+                        <a href="https://github.com/MSabbirHossen" target="_blank" aria-label="Visit Sabbir's GitHub Profile">Visit my favorite website</a>           
+        </div>
         </section>
     <footer>
         <p>Thank you for checking out my practice code!</p>
